--- a/src/app/top-menu/top-menu.component.html
+++ b/src/app/top-menu/top-menu.component.html
@@ -6,14 +6,13 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" routerLink=""> <img src="" type="image/png" /> IntegraTI </a>
+      <a class="navbar-brand" routerLink=""> <img src="" type="image/png" /> LeadMe </a>
     </div>
     <div class="navbar-collapse collapse navbar-material-light-blue-collapse">
       <ul class="nav navbar-nav navbar-right">
-        <li routerLinkActive="active"> <a routerLink="/eventos"> Eventos </a> </li>
-        <li routerLinkActive="active"> <a> Repositório </a> </li>
-        <li routerLinkActive="active"> <a routerLink="/jobs"> Jobs </a> </li>
+        <li routerLinkActive="active"> <a routerLink="/eventos"> Estatísticas </a> </li>
         <li routerLinkActive="active"> <a routerLink="/about"> Sobre </a> </li>
+        <li routerLinkActive="active"> <a routerLink="/login"> Login </a> </li>
       </ul>
     </div>
   </div>
