--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,7 +1,7 @@
 <div class="col-md-6 col-md-offset-3">
   <h2>Login</h2>
   <p> Faça login com seus dados do SIGAA para ter acesso à área restrita </p>
-  <div class="alert alert-info"> Usuário: admin Senha: admin</div>
+  <!-- <div class="alert alert-info"> Usuário: admin Senha: admin</div> -->
 
   <form #f="ngForm" (ngSubmit)="fazerLogin(f.value)">
     <div class="form-group">
