Add simulations' components

--- a/src/app/simulations/simulations.component.html
+++ b/src/app/simulations/simulations.component.html
@@ -1,1 +1,11 @@
 <p> Simulations works </p>
+
+  <div class="row">
+      <div class="col-sm-6">
+          <app-previous> </app-previous>
+      </div>
+      <div class="col-sm-6">
+          <app-next> </app-next>
+      </div>
+  </div>
+
