--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,18 +1,18 @@
 <div class="col-md-6 col-md-offset-3">
   <h2>Login</h2>
   <p> Faça login com seus dados do SIGAA para ter acesso à área restrita </p>
-  <!-- <div class="alert alert-info"> Usuário: admin Senha: admin</div> -->
+  <div class="alert alert-info"> Usuário: admin Senha: admin</div>
 
-  <form #f="ngForm" (ngSubmit)="fazerLogin(f.value)">
+  <form  [formGroup]="formularioLogin" (ngSubmit) = "fazerLogin()">
     <div class="form-group">
       <label for="username">Usuário</label>
-      <input type="text" class="form-control" name="username" ngModel 
+      <input type="text" formControlName = "usuario" class="form-control" 
       required />
       <div class="help-block">Nome de usuário é necessário</div>
     </div>
     <div class="form-group">
       <label for="password">Senha</label>
-      <input type="password" class="form-control" name="password" ngModel
+      <input type="password" formControlName = "password" class="form-control" 
       required />
       <div class="help-block">Senha é necessária</div>
     </div>
