Update simulations, add contents tables

--- a/src/app/simulations/next/next.component.html
+++ b/src/app/simulations/next/next.component.html
@@ -2,53 +2,53 @@
   <thead>
   <tr>
     <th>#</th>
-    <th>Column heading</th>
-    <th>Column heading</th>
-    <th>Column heading</th>
+    <th>Nome</th>
+    <th>Código</th>
+    <th>Tipo</th>
+    <th> CH </th>
   </tr>
   </thead>
   <tbody>
   <tr>
     <td>1</td>
-    <td>Column content</td>
-    <td>Column content</td>
-    <td>Column content</td>
+    <td>ESTRUTURA DE DADOS BÁSICAS I</td>
+    <td>IMD0029</td>
+    <td>Obrigatória</td>
+    <td> 60h</td>
   </tr>
   <tr>
     <td>2</td>
-    <td>Column content</td>
-    <td>Column content</td>
-    <td>Column content</td>
+    <td>LINGUAGEM DE PROGRAMAÇÃO I</td>
+    <td>IMD0030</td>
+    <td>Obrigatória</td>
+    <td> 60h</td>
   </tr>
-  <tr class="info">
+  <tr>
     <td>3</td>
-    <td>Column content</td>
-    <td>Column content</td>
-    <td>Column content</td>
+    <td>PROBABILIDADE</td>
+    <td>IMD0033</td>
+    <td>Obrigatória</td>
+    <td> 60h</td>
   </tr>
-  <tr class="success">
+  <tr>
     <td>4</td>
-    <td>Column content</td>
-    <td>Column content</td>
-    <td>Column content</td>
+    <td>FUNDAMENTOS MATEMÁTICOS DA COMPUTAÇÃO II </td>
+    <td>IMD0038</td>
+    <td>Obrigatória</td>
+    <td> 90h</td>
   </tr>
-  <tr class="danger">
+  <tr>
     <td>5</td>
-    <td>Column content</td>
-    <td>Column content</td>
-    <td>Column content</td>
+    <td>ANÁLISE E PROJETO ORIENTADO A OBJETOS</td>
+    <td>DIM0504</td>
+    <td>Optativa</td>
+    <td> 60h</td>
   </tr>
-  <tr class="warning">
-    <td>6</td>
-    <td>Column content</td>
-    <td>Column content</td>
-    <td>Column content</td>
-  </tr>
-  <tr class="active">
-    <td>7</td>
-    <td>Column content</td>
-    <td>Column content</td>
-    <td>Column content</td>
-  </tr>
+  <tr>
+    <td> 6</td>
+    <td> PROJETO DE INTERFACES DE USUÁRIO</td>
+    <td> DIM0508 </td>
+    <td> Optativa</td>
+    <td> 60h</td>
   </tbody>
 </table>
