--- a/src/app/simulations/previous/previous.component.html
+++ b/src/app/simulations/previous/previous.component.html
@@ -1,38 +1,50 @@
 <table class="table table-striped table-hover ">
   <thead>
   <tr>
-    <th>#</th>
-    <th>Column heading</th>
+    <th>Disciplina</th>
+    <th>CH</th>
   </tr>
   </thead>
   <tbody>
   <tr>
-    <td>1</td>
-    <td>Column content</td>
+    <td> PRÁTICAS DE LEITURA E ESCRITA EM PORTUGUÊS I  </td>
+    <td>30h</td>
   </tr>
   <tr>
-    <td>2</td>
-    <td>Column content</td>
+    <td>RESOLUÇÃO DE PROBLEMAS MATEMÁTICOS PARA TI</td>
+    <td>180h</td>
   </tr>
+  <tr>
+    <td>PRÁTICAS DE LEITURA EM INGLÊS </td>
+    <td>30h</td>
+  </tr>
+  <tr>
+    <td> TECNOLOGIA DA INFORMAÇÃO E SOCIEDADE </td>
+    <td> 30h</td>
+  </tr>
+  <tr>
+    <td> INTRODUÇÃO ÀS TÉCNICAS DE PROGRAMAÇÃO  </td>
+    <td>90h</td>
+  </tr>
+  <tr> 
+    <td> CÁLCULO DIFERENCIAL E INTEGRAL I </td>
+    <td> 90h</td>
+  </tr>
+  <tr>
+    <td> FUNDAMENTOS MATEMÁTICOS DA COMPUTAÇÃO I </td>
+    <td> 90h</td>
+  </tr>
+  <tr> 
+    <td> 	VETORES E GEOMETRIA ANALÍTICA </td>
+    <td> 60h</td>
+  </tr>
+
   <tr class="info">
-    <td>3</td>
-    <td>Column content</td>
+    <td> Total </td>
+    <td> 600h </td>
   </tr>
-  <tr class="success">
-    <td>4</td>
-    <td>Column content</td>
-  </tr>
-  <tr class="danger">
-    <td>5</td>
-    <td>Column content</td>
-  </tr>
-  <tr class="warning">
-    <td>6</td>
-    <td>Column content</td>
-  </tr>
-  <tr class="active">
-    <td>7</td>
-    <td>Column content</td>
-  </tr>
+
+  
+
   </tbody>
 </table>
