Organiza tela de simulações

--- a/src/app/simulations/simulations.component.html
+++ b/src/app/simulations/simulations.component.html
@@ -1,9 +1,25 @@
+<h2> Simulações </h2>
+<p> Simule sua grade do próximo semestre </p>
+<p> Clique duas vezes em uma disciplina para adicioná-la ou retirá-la da sua grade. </p>
+<hr/>
   <div class="row">
-      <div class="col-sm-4">
-          <app-previous> </app-previous>
-      </div>
-      <div class="col-sm-8">
+      <div class="col-sm-7">
+          <h3> Disciplinas disponíveis para você </h3>
           <app-next> </app-next>
+      </div>
+      <div class="col-sm-5">
+          <h3> Sua grade </h3>
+          <app-previous> </app-previous>
+            <p> Diagnóstico: </p>
+            <div class="progress">
+                <div class="progress-bar progress-bar-danger" style="width: 80%"></div>
+            </div>
+            <p> Sua carga horária está </p>
+      </div>
+  </div>
+  <div class="row">
+      <div class="col-sm-12">
+          
       </div>
   </div>
 
