--- a/src/app/simulations/simulations.component.html
+++ b/src/app/simulations/simulations.component.html
@@ -1,4 +1,4 @@
-<h2> Simulações </h2>
+<h1 class="header"> Simulações </h1>
 <p> Simule sua grade do próximo semestre </p>
 <p> Clique duas vezes em uma disciplina para adicioná-la ou retirá-la da sua grade. </p>
 <hr/>
@@ -9,7 +9,7 @@
       </div>
       <div class="col-sm-5">
           <h3> Sua grade </h3>
-          <app-previous> </app-previous>
+          <app-grade> </app-grade>
             <p> Diagnóstico: </p>
             <div class="progress">
                 <div class="progress-bar progress-bar-danger" style="width: 80%"></div>
