--- a/src/app/student/student.component.html
+++ b/src/app/student/student.component.html
@@ -1,5 +1,9 @@
+<h1 class="header"> Meu Perfil </h1>
+<p> Verifique informações sobre seus índices e desempenho acadêmico </p>
+<hr/>
   <div class="row">
       <div class="col-sm-4">
+        <h4> Disciplinas cursadas </h4>
           <table class="table table-striped table-hover ">
             <thead>
             <tr>
@@ -39,16 +43,17 @@
             <tr> 
               <td> 	VETORES E GEOMETRIA ANALÍTICA </td>
               <td> 60h</td>
-            </tr>
-
-            <tr class="info">
-              <td> Total </td>
-              <td> 600h </td>
-            </tr>
-
-        
+            </tr>        
             </tbody>
           </table>
+
+          <p> Carga Horária Integralizada: 600h </p>
+                <p> Faltam 620h </p>
+                <div class="progress">
+                  <div class="progress-bar" style="width: 60%;"></div>
+                </div>
+                
+
       </div>
       <div class="col-sm-8">
           <p> teste </p>
