--- a/src/app/simulations/grade/grade.component.html
+++ b/src/app/simulations/grade/grade.component.html
@@ -1,50 +1,20 @@
 <table class="table table-striped table-hover ">
   <thead>
   <tr>
-    <th>Disciplina</th>
-    <th>CH</th>
+    <th>Nome</th>
+    <th>Código</th>
+    <th>Tipo</th>
+    <th> CH </th>
   </tr>
   </thead>
-  <tbody>
-  <tr>
-    <td> PRÁTICAS DE LEITURA E ESCRITA EM PORTUGUÊS I  </td>
-    <td>30h</td>
-  </tr>
-  <tr>
-    <td>RESOLUÇÃO DE PROBLEMAS MATEMÁTICOS PARA TI</td>
-    <td>180h</td>
-  </tr>
-  <tr>
-    <td>PRÁTICAS DE LEITURA EM INGLÊS </td>
-    <td>30h</td>
-  </tr>
-  <tr>
-    <td> TECNOLOGIA DA INFORMAÇÃO E SOCIEDADE </td>
-    <td> 30h</td>
-  </tr>
-  <tr>
-    <td> INTRODUÇÃO ÀS TÉCNICAS DE PROGRAMAÇÃO  </td>
-    <td>90h</td>
-  </tr>
-  <tr> 
-    <td> CÁLCULO DIFERENCIAL E INTEGRAL I </td>
-    <td> 90h</td>
-  </tr>
-  <tr>
-    <td> FUNDAMENTOS MATEMÁTICOS DA COMPUTAÇÃO I </td>
-    <td> 90h</td>
-  </tr>
-  <tr> 
-    <td> 	VETORES E GEOMETRIA ANALÍTICA </td>
-    <td> 60h</td>
-  </tr>
-
-  <tr class="info">
-    <td> Total </td>
-    <td> 600h </td>
-  </tr>
-
-  
-
+  <tbody *ngFor="let disciplina of listaDisciplinas" >
+    <tr (click)="clicked(evento)"> 
+      <td> {{disciplina.nome}}</td>
+      <td> {{disciplina.codigo}} </td>
+      <td> {{disciplina.tipo}} </td>
+      <td> {{disciplina.ch}} </td>
+    </tr>
   </tbody>
 </table>
+
+<p> ttttttt {{a}} </p>
