--- a/src/app/simulations/simulations.component.html
+++ b/src/app/simulations/simulations.component.html
@@ -5,11 +5,11 @@
   <div class="row">
       <div class="col-sm-7">
           <h3> Disciplinas disponíveis para você </h3>
-          <app-next> </app-next>
+          <app-next (messageEvent)="receiveMessage($event)"> </app-next>
       </div>
       <div class="col-sm-5">
           <h3> Sua grade </h3>
-          <app-grade> </app-grade>
+          <app-grade [fn]="parentFn"> </app-grade>
             <p> Diagnóstico: </p>
             <div class="progress">
                 <div class="progress-bar progress-bar-danger" style="width: 80%"></div>
@@ -23,3 +23,4 @@
       </div>
   </div>
 
+<p (click)="parentFn()"> TESTANDO </p>
