--- a/src/app/simulations/grade/grade.component.html
+++ b/src/app/simulations/grade/grade.component.html
@@ -1,20 +1,30 @@
-<table class="table table-striped table-hover ">
-  <thead>
-  <tr>
-    <th>Nome</th>
-    <th>Código</th>
-    <th>Tipo</th>
-    <th> CH </th>
-  </tr>
-  </thead>
-  <tbody *ngFor="let disciplina of listaDisciplinas" >
-    <tr (click)="clicked(evento)"> 
-      <td> {{disciplina.nome}}</td>
-      <td> {{disciplina.codigo}} </td>
-      <td> {{disciplina.tipo}} </td>
-      <td> {{disciplina.ch}} </td>
+<div *ngIf="listaDisciplinas.length > 0"> 
+  <table  class="table table-striped table-hover ">
+    <thead>
+    <tr>
+      <th>Nome</th>
+      <th>Código</th>
+      <th>Tipo</th>
+      <th> CH </th>
     </tr>
-  </tbody>
-</table>
+    </thead>
+    <tbody  *ngFor="let disciplina of listaDisciplinas" >
+      <tr (click)="remove(disciplina)"> 
+        <td> {{disciplina.nome}}</td>
+        <td> {{disciplina.codigo}} </td>
+        <td> {{disciplina.tipo}} </td>
+        <td> {{disciplina.ch}} </td>
+      </tr>
+    </tbody>
+  </table>
 
-<p> ttttttt {{a}} </p>
+  <p> Diagnóstico: </p>
+  <div class="progress">
+    <div class="progress-bar progress-bar-danger" style="width: 80%"></div>
+  </div>
+  <p> Sua carga horária está </p>
+</div> 
+
+<div *ngIf="listaDisciplinas.length <= 0">
+  <p> Clique em uma disciplina na tabela ao lado para adicioná-la.
+</div>
