--- a/src/app/top-menu/top-menu.component.html
+++ b/src/app/top-menu/top-menu.component.html
@@ -11,7 +11,7 @@
     <div class="navbar-collapse collapse navbar-material-light-blue-collapse">
       <ul class="nav navbar-nav navbar-right">
         <li routerLinkActive="active"> <a routerLink="/profile"> Meu perfil </a> </li>
-        <li routerLinkActive="active"> <a routerLink="/eventos"> Meu curso </a> </li>
+        <li routerLinkActive="active"> <a routerLink="/course"> Meu curso </a> </li>
         <li routerLinkActive="active"> <a routerLink="/simulations"> Simulações </a> </li>
         <li routerLinkActive="active"> <a routerLink="/login"> Login </a> </li>
       </ul>
