--- a/src/app/student/student.component.html
+++ b/src/app/student/student.component.html
@@ -56,7 +56,7 @@
 
       </div>
       <div class="col-sm-8">
-          <p> teste </p>
+          <p> Cursados x Aprovados </p>
       </div>
   </div>
 
