Implementa o login e adiciona disciplinas ao service

--- a/src/app/top-menu/top-menu.component.html
+++ b/src/app/top-menu/top-menu.component.html
@@ -13,7 +13,7 @@
         <li routerLinkActive="active"> <a routerLink="/profile"> Meu perfil </a> </li>
         <li routerLinkActive="active"> <a routerLink="/course"> Meu curso </a> </li>
         <li routerLinkActive="active"> <a routerLink="/simulations"> Simulações </a> </li>
-        <li routerLinkActive="active"> <a routerLink="/login"> Login </a> </li>
+        <li routerLinkActive="active"> <a routerLink="/login"> {{loginOuLogout}} </a> </li>
       </ul>
     </div>
   </div>
