--- a/src/app/simulations/next/next.component.html
+++ b/src/app/simulations/next/next.component.html
@@ -1,3 +1,4 @@
+<div class="next">
 <table class="table table-striped table-hover ">
   <thead>
   <tr>
@@ -16,4 +17,4 @@
     </tr>
   </tbody>
 </table>
-
+</div>
