--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -26,8 +26,12 @@
             <div class="help-block">Senha é necessária</div>
         </div>
 
-        <div class="form-group">
-            <button class="btn btn-primary">Cadastrar</button>
-            <a class="btn btn-link">Cancelar</a>
-        </div>
+      
+
 </div>
+
+<div class="col-md-6 col-md-offset-3">
+    <a class="btn btn-primary" href="/login">Cadastrar</a>
+    <a class="btn btn-link" href="/login">Cancelar</a>
+</div>
+        
