Corrige erro de digitação em simulações

--- a/src/app/simulations/simulations.component.html
+++ b/src/app/simulations/simulations.component.html
@@ -1,6 +1,6 @@
 <h1 class="header"> Simulações </h1>
 <p> Simule sua grade do próximo semestre </p>
-<p> Clique duas vezes em uma disciplina para adicioná-la ou retirá-la da sua grade. </p>
+<p> Clique uma vez em uma disciplina para adicioná-la ou retirá-la da sua grade. </p>
 <hr/>
   <div class="row">
       <div class="col-sm-7">
